# gulp-django

./: .gitignore  gulpfile.babel.js  gulpfile.js  note.md  package-lock.json  package.json  pyproject.toml
assets/html/base/: header.html
assets/html/pages/: index.html
assets/html/pages/services/: uborka-ofisov.html
assets/js/: main.js
assets/scss/: style.scss
assets/scss/abstracts/: _breakpoints.scss  _colors.scss  _vars.scss
assets/scss/base/: _base.scss  _containers.scss  _fonts.scss  _icons.scss  _vars.scss
assets/scss/blocks/: _header.scss  _nav.scss
gulp/: config.js
gulp/tasks/: assets.js  clean.js  django.js  html.js  images.js  scripts.js  server.js  sprites.js  styles.js
src/core/: settings.py  urls.py
src/pages/: urls.py  views.py
src/static/css/: style.css  style.min.css
src/static/icons/symbol/: sprite.symbol.html
src/static/js/: main.min.js  main.min.js.map
src/templates/base/: base.html  header.html
src/templates/pages/: index.html
src/templates/pages/services/: uborka-kvartir.html
